styles/Home.module.scss
@use "mixins";

.section {
  margin: 0 auto;
}

.about .image {
  width: 100%;
}

.about p {
  font-size: 14px;
}

.sectionTitle {
  margin: 0;
}

.link {
  display: block;
  padding: 12px;
  border-radius: 0px;
  border-bottom: 1px dashed transparent;
  color: var(--bodyColor);
  text-decoration: none;

  &:hover,
  &:focus {
    border-bottom-color: var(--linkHoverColor);
    color: var(--bodyColor);
    text-decoration: none;
    transition: 0.3s border-bottom;
  }

  &:active {
    border-bottom-style: solid;
  }
}

.caseStudies {
  text-align: right;

  @include mixins.media("lg") {
    text-align: left;
  }
}

